Convert Skill section to rated skills

--- a/index.html
+++ b/index.html
@@ -237,29 +237,9 @@
         <h3>SKILLS</h3>
 
         <article>
-          <p class="tags">
-            <span>Ruby <i class="fa fa-star"></i></span>
-            <span>Ruby on Rails <i class="fa fa-star"></i></span>
-            <span>React <i class="fa fa-star"></i></span>
-            <span>Vue</span>
-            <span>AWS</span>
-            <span>Lambda functions</span>
-            <span>Git</span>
-            <span>PostgreSQL</span>
-            <span>MySQL</span>
-            <span>TDD</span>
-            <span>RSpec</span>
-          </p>
-        </article>
-      </section>
-
-      <section class="languages">
-        <h3>LANGUAGES</h3>
-
-        <article>
           <ul>
             <li>
-              <p class="language">Polish <i>(native)</i></p>
+              <p class="skill">Ruby</p>
               <div class="rating">
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
@@ -269,7 +249,7 @@
               </div>
             </li>
             <li>
-              <p class="language">English</p>
+              <p class="skill">Ruby on Rails</p>
               <div class="rating">
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
@@ -279,23 +259,73 @@
               </div>
             </li>
             <li>
-              <p class="language">German</p>
+              <p class="skill">React</p>
               <div class="rating">
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
                 <i class="fa fa-circle-o"></i>
+              </div>
+            </li>
+            <li>
+              <p class="skill">Vue</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle-o"></i>
+              </div>
+            </li>
+            <li>
+              <p class="skill">AWS</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
                 <i class="fa fa-circle-o"></i>
                 <i class="fa fa-circle-o"></i>
               </div>
             </li>
             <li>
-              <p class="language">Russian</p>
+              <p class="skill">AWS Lambda</p>
               <div class="rating">
                 <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+              </div>
+            </li>
+            <li>
+              <p class="skill">PostgreSQL</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
                 <i class="fa fa-circle-o"></i>
-                <i class="fa fa-circle-o"></i>
-                <i class="fa fa-circle-o"></i>
-                <i class="fa fa-circle-o"></i>
+              </div>
+            </li>
+            <li>
+              <p class="skill">TDD/RSpec</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+              </div>
+            </li>
+            <li>
+              <p class="skill">Git</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
               </div>
             </li>
           </ul>
@@ -323,6 +353,55 @@
         </article>
       </section>
 
+      <section class="skills">
+        <h3>LANGUAGES</h3>
+
+        <article>
+          <ul>
+            <li>
+              <p class="skill">Polish <i>(native)</i></p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+              </div>
+            </li>
+            <li>
+              <p class="skill">English</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+              </div>
+            </li>
+            <li>
+              <p class="skill">German</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+              </div>
+            </li>
+            <li>
+              <p class="skill">Russian</p>
+              <div class="rating">
+                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle-o"></i>
+              </div>
+            </li>
+          </ul>
+        </article>
+      </section>
+
       <section class="passions">
         <h3>PASSIONS</h3>
 
@@ -330,9 +409,9 @@
           <p class="tags">
             <span>Kitesurfing</span>
             <span>Snowboarding</span>
+            <span>Tennis</span>
             <span>Mountain biking</span>
             <span>Swimming</span>
-            <span>Tennis</span>
             <span>Sci-Fi novels</span>
             <span>Cinematography</span>
           </p>
