Update Google Fonts inclusion

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" type="text/css" href="application.css?version=2">
 
-  <link href="https://fonts.googleapis.com/css?family=Kalam|Open+Sans:400,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
   <link rel="icon" href="images/avatar-192x192.png?version=2" sizes="192x192">
   <link rel="apple-touch-icon-precomposed" href="images/avatar-192x192.png?version=2">
