--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                   <i class="fa fa-calendar"></i> <span>2018 - present</span>
                 </p>
                 <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Vancouver, CA (Remote)</span>
+                  <i class="fa fa-map-marker"></i> <span>Vancouver, BC (Remote)</span>
                 </p>
               </div>
 
               <ul class="experience-details">
                 <li>Development of the online Résumé Builder web application <a href="https://www.visualcv.com/">VisualCV</a></li>
                 <li>Responsible for the development and maintenance of the backend API</li>
-                <li>Responsible for the development and maintenance of the visual CV editor</li>
+                <li>Responsible for the development and maintenance of the front-end visual CV editor</li>
                 <li>Responsible for the migration of selected business logic to AWS Lambda</li>
                 <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">React</span> <span class="technology">AWS Lambda</span></li>
               </ul>
@@ -96,7 +96,7 @@
 
               <ul class="experience-details">
                 <li>Maintenance and development of the <a href="https://pulseapp.com/">PulseApp</a> accounting application for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2018 - 2019</span></li>
-                <li>Extending Recreational Vehicles rentals and insurance whitelabel platform for <a href="https://www.digisureinc.com/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
+                <li>Extending Recreational Vehicles rentals and insurance whitelabel platform for <a href="https://digisure.ai/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
                 <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2013 - 2015</span></li>
                 <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (<strong>TopWhite</strong>) <span class="technology">Ruby</span> • <span class="period">2011 - 2013</span></li>
                 <li>Created custom CMS for a car repair shop and towing service (<strong>Żybko</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2010 - 2013</span></li>
