Make CV *responsive* 💥

--- a/index.html
+++ b/index.html
@@ -26,20 +26,18 @@
   <div class="stripe">
   </div>
 
-  <article class="intro">
-    <h1>PAWEŁ GOŚCICKI</h1>
-    <h2>Senior Ruby Architect / Software Engineering Manager</h2>
+  <header>
+    <section class="intro">
+      <h1>PAWEŁ GOŚCICKI</h1>
+      <h2>Senior Ruby Architect / Software Engineering Manager</h2>
 
-    <section class="contact">
-      <div class="column-left">
+      <div class="contact">
         <ul>
           <li><i class="fa fa-fw fa-wordpress"></i><a href="http://pawelgoscicki.com">pawelgoscicki.com</a></li>
           <li><i class="fa fa-fw fa-linkedin"></i><a href="https://pl.linkedin.com/in/pawelgoscicki">LinkedIn</a></li>
           <li><i class="fa fa-fw fa-github"></i><a href="https://github.com/pjg">GitHub</a></li>
         </ul>
-      </div>
 
-      <div class="column-right">
         <ul>
           <li><i class="fa fa-fw fa-envelope-o"></i><span class="email">pawel DOT goscicki AT gmail DOT com</span></li>
           <li><i class="fa fa-fw fa-map-marker"></i><a href="https://www.google.com/maps">Remote (World)</a></li>
@@ -47,173 +45,169 @@
       </div>
     </section>
 
-    <img class="avatar" src="images/avatar.jpg?version=2" alt="Paweł Gościcki">
-  </article>
+    <section class="avatar">
+      <img src="images/avatar.jpg?version=2" alt="Paweł Gościcki">
+    </section>
+  </header>
 
   <main role="main" class="content">
 
-    <div class="column-left">
+    <section class="experience">
+      <h3>EXPERIENCE</h3>
 
-      <section class="experience">
-        <h3>EXPERIENCE</h3>
+      <article>
+        <ul class="education-experience">
+          <li>
+            <h4>Senior Full Stack Engineer</h4>
+            <h5>Workstory Inc.</h5>
 
-        <article>
-          <ul class="education-experience">
-            <li>
-              <h4>Senior Full Stack Engineer</h4>
-              <h5>Workstory Inc.</h5>
+            <div class="period-place">
+              <p class="period">
+                <i class="fa fa-calendar"></i> <span>2018 - present</span>
+              </p>
+              <p class="place">
+                <i class="fa fa-map-marker"></i> <span>Vancouver, BC (Remote)</span>
+              </p>
+            </div>
 
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>2018 - present</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Vancouver, BC (Remote)</span>
-                </p>
-              </div>
+            <ul class="experience-details">
+              <li>Development of the online Résumé Builder web application <a href="https://www.visualcv.com/">VisualCV</a></li>
+              <li>Responsible for the development and maintenance of the backend API and the front-end visual CV editor</li>
+              <li>Responsible for the migration of selected business logic to AWS Lambda</li>
+              <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">React</span> <span class="technology">AWS Lambda</span></li>
+            </ul>
+          </li>
 
-              <ul class="experience-details">
-                <li>Development of the online Résumé Builder web application <a href="https://www.visualcv.com/">VisualCV</a></li>
-                <li>Responsible for the development and maintenance of the backend API</li>
-                <li>Responsible for the development and maintenance of the front-end visual CV editor</li>
-                <li>Responsible for the migration of selected business logic to AWS Lambda</li>
-                <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">React</span> <span class="technology">AWS Lambda</span></li>
-              </ul>
-            </li>
+          <li>
+            <h4>Freelance Full Stack Engineer</h4>
+            <h5>Freelance</h5>
 
-            <li>
-              <h4>Freelance Full Stack Engineer</h4>
-              <h5>Freelance</h5>
+            <div class="period-place">
+              <p class="period">
+                <i class="fa fa-calendar"></i> <span>2002 - present</span>
+              </p>
+              <p class="place">
+                <i class="fa fa-map-marker"></i> <span>Remote</span>
+              </p>
+            </div>
 
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>2002 - present</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Remote</span>
-                </p>
-              </div>
+            <ul class="experience-details">
+              <li>Maintenance and development of the <a href="https://pulseapp.com/">PulseApp</a> accounting application for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2018 - 2019</span></li>
+              <li>Extending Recreational Vehicles rentals and insurance whitelabel platform for <a href="https://digisure.ai/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
+              <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2013 - 2015</span></li>
+              <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (<strong>TopWhite</strong>) <span class="technology">Ruby</span> • <span class="period">2011 - 2013</span></li>
+              <li>Created custom CMS for a car repair shop and towing service (<strong>Żybko</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2010 - 2013</span></li>
+              <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy, Poland (<strong>Express&nbsp;Kaszubski</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2007 - 2019</span></li>
+              <li>Created custom CMS and front-end for an online application with postcard wishes (<strong>TylkoZyczenia</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2007 - 2009</span></li>
+              <li>Built custom CMS system powering the website for a country guesthouse (<strong>Kania&nbsp;Lodge</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2002 - 2019</span></li>
+              <li>Created custom CMS and inventory management system for an online shop selling wine (<strong>Wine Express</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2002 - 2015</span></li>
+            </ul>
+          </li>
 
-              <ul class="experience-details">
-                <li>Maintenance and development of the <a href="https://pulseapp.com/">PulseApp</a> accounting application for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2018 - 2019</span></li>
-                <li>Extending Recreational Vehicles rentals and insurance whitelabel platform for <a href="https://digisure.ai/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
-                <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2013 - 2015</span></li>
-                <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (<strong>TopWhite</strong>) <span class="technology">Ruby</span> • <span class="period">2011 - 2013</span></li>
-                <li>Created custom CMS for a car repair shop and towing service (<strong>Żybko</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2010 - 2013</span></li>
-                <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy, Poland (<strong>Express&nbsp;Kaszubski</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2007 - 2019</span></li>
-                <li>Created custom CMS and front-end for an online application with postcard wishes (<strong>TylkoZyczenia</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2007 - 2009</span></li>
-                <li>Built custom CMS system powering the website for a country guesthouse (<strong>Kania&nbsp;Lodge</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2002 - 2019</span></li>
-                <li>Created custom CMS and inventory management system for an online shop selling wine (<strong>Wine Express</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2002 - 2015</span></li>
-              </ul>
-            </li>
+          <li>
+            <h4>Chief Ruby Architect / Software Engineering Manager</h4>
+            <h5>Hello Bar</h5>
 
-            <li>
-              <h4>Chief Ruby Architect / Software Engineering Manager</h4>
-              <h5>Hello Bar</h5>
+            <div class="period-place">
+              <p class="period">
+                <i class="fa fa-calendar"></i> <span>2016 - 2018</span>
+              </p>
+              <p class="place">
+                <i class="fa fa-map-marker"></i> <span>San Diego, CA (Remote)</span>
+              </p>
+            </div>
 
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>2016 - 2018</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>San Diego, CA (Remote)</span>
-                </p>
-              </div>
+            <ul class="experience-details">
+              <li>Responsible for managing engineering and QA teams</li>
+              <li>Implemented and enforced coding standards</li>
+              <li>Responsible for implementing SCRUM methodology</li>
+              <li>Introduced styling guide tools to the project (Rubocop, ESLint)</li>
+              <li>Centralised the infrastructure by moving all services to AWS</li>
+              <li>Led an effort to increase code coverage from 50% to 97%</li>
+              <li>Scaled production deployments from once per week to multiple per day</li>
+              <li>Built and launched first AWS Lambda functions</li>
+              <li>Moved core business logic to AWS Lambda</li>
+              <li>Reduced total infrastructure costs by more than 60%</li>
+              <li>Utilised AWS services like EC2, ELB, Lambda, SNS, SQS, DynamoDB, API Gateway, RDS, ElastiCache, Route 53, CloudFront and CloudWatch</li>
+              <li>Architected Hello Bars's data analytics infrastructure utilising Amplitude and AWS QuickSight</li>
+              <li>Responsible for recruitment process for the engineering team</li>
+              <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> <span class="technology">Node</span></li>
+            </ul>
+          </li>
 
-              <ul class="experience-details">
-                <li>Responsible for managing engineering and QA teams</li>
-                <li>Implemented and enforced coding standards</li>
-                <li>Responsible for implementing SCRUM methodology</li>
-                <li>Introduced styling guide tools to the project (Rubocop, ESLint)</li>
-                <li>Centralised the infrastructure by moving all services to AWS</li>
-                <li>Led an effort to increase code coverage from 50% to 97%</li>
-                <li>Scaled production deployments from once per week to multiple per day</li>
-                <li>Built and launched first AWS Lambda functions</li>
-                <li>Moved core business logic to AWS Lambda</li>
-                <li>Reduced total infrastructure costs by more than 60%</li>
-                <li>Utilised AWS services like EC2, ELB, Lambda, SNS, SQS, DynamoDB, API Gateway, RDS, ElastiCache, Route 53, CloudFront and CloudWatch</li>
-                <li>Architected Hello Bars's data analytics infrastructure utilising Amplitude and AWS QuickSight</li>
-                <li>Responsible for recruitment process for the engineering team</li>
-                <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> <span class="technology">Node</span></li>
-              </ul>
-            </li>
+          <li>
+            <h4>Lead Ruby Developer</h4>
+            <h5>AirHelp</h5>
 
-            <li>
-              <h4>Lead Ruby Developer</h4>
-              <h5>AirHelp</h5>
+            <div class="period-place">
+              <p class="period">
+                <i class="fa fa-calendar"></i> <span>2014 - 2016</span>
+              </p>
+              <p class="place">
+                <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
+              </p>
+            </div>
 
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>2014 - 2016</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
-                </p>
-              </div>
+            <ul class="experience-details">
+              <li>Led a team building IT systems of AirHelp</li>
+              <li>Introduced GitHub flow in the development process with pull requests and code reviews</li>
+              <li>Introduced CI process in the development workflow (using TeamCity)</li>
+              <li>Shaped best web development practices across the company</li>
+              <li>Embraced and encouraged the microservices architecture</li>
+              <li>Responsible for shaping the hiring process and hiring new developers</li>
+              <li>Scaled the team from eight to more than thirty developers</li>
+              <li>Leader of major internal projects (claim state machine, claim value model, OTA partners API, etc.)</li>
+              <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">Ruby</span> <span class="technology">Ember</span></li>
+            </ul>
+          </li>
 
-              <ul class="experience-details">
-                <li>Led a team building IT systems of AirHelp</li>
-                <li>Introduced GitHub flow in the development process with pull requests and code reviews</li>
-                <li>Introduced CI process in the development workflow (using TeamCity)</li>
-                <li>Shaped best web development practices across the company</li>
-                <li>Embraced and encouraged the microservices architecture</li>
-                <li>Responsible for shaping the hiring process and hiring new developers</li>
-                <li>Scaled the team from eight to more than thirty developers</li>
-                <li>Leader of major internal projects (claim state machine, claim value model, OTA partners API, etc.)</li>
-                <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">Ruby</span> <span class="technology">Ember</span></li>
-              </ul>
-            </li>
+          <li>
+            <h4>Lead Ruby Developer</h4>
+            <h5>Exvo</h5>
 
-            <li>
-              <h4>Lead Ruby Developer</h4>
-              <h5>Exvo</h5>
+            <div class="period-place">
+              <p class="period">
+                <i class="fa fa-calendar"></i> <span>2011 - 2014</span>
+              </p>
+              <p class="place">
+                <i class="fa fa-map-marker"></i> <span>Hague, NL (Remote)</span>
+              </p>
+            </div>
 
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>2011 - 2014</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Hague, NL (Remote)</span>
-                </p>
-              </div>
+            <ul class="experience-details">
+              <li>Led a team of developers building cloud based operating system bringing your local machine to the web and money management platform enabling users to send funds to their friends</li>
+              <li>Technologies: <span class="technology">Ruby on Rails</span></li>
+            </ul>
+          </li>
 
-              <ul class="experience-details">
-                <li>Led a team of developers building cloud based operating system bringing your local machine to the web and money management platform enabling users to send funds to their friends</li>
-                <li>Technologies: <span class="technology">Ruby on Rails</span></li>
-              </ul>
-            </li>
+          <li>
+            <h4>PHP Developer</h4>
+            <h5>Computer Science Centre, Gdańsk University of Technology</h5>
 
-            <li>
-              <h4>PHP Developer</h4>
-              <h5>Computer Science Centre, Gdańsk University of Technology</h5>
+            <div class="period-place">
+              <p class="period">
+                <i class="fa fa-calendar"></i> <span>2004 - 2009</span>
+              </p>
+              <p class="place">
+                <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
+              </p>
+            </div>
 
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>2004 - 2009</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
-                </p>
-              </div>
+            <ul class="experience-details">
+              <li>Responsible for development of the Online Recruitment Platform for candidates willing to study at the Gdańsk University of Technology</li>
+              <li>Technologies: <span class="technology">PHP</span></li>
+            </ul>
+          </li>
+        </ul>
+      </article>
+    </section>
 
-              <ul class="experience-details">
-                <li>Responsible for development of the Online Recruitment Platform for candidates willing to study at the Gdańsk University of Technology</li>
-                <li>Technologies: <span class="technology">PHP</span></li>
-              </ul>
-            </li>
-          </ul>
-        </article>
-      </section>
-
-    </div>
-
-    <div class="column-right">
-
+    <aside>
       <section class="life-philosophy">
         <h3>LIFE PHILOSOPHY</h3>
 
         <article>
-        <p>“That is done fast enough<br>which is done well enough.”</p>
+        <p>“That is done fast enough which is done well enough.”</p>
         </article>
       </section>
 
@@ -417,12 +411,11 @@
           </p>
         </article>
       </section>
-
-    </div>
+    </aside>
 
   </main>
 
-  <div class="stripe stripe-bottom">
+  <div class="stripe">
   </div>
 
 </div>
