Add responsive viewport meta tag

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="icon" href="images/avatar-192x192.png?version=3" sizes="192x192">
   <link rel="apple-touch-icon-precomposed" href="images/avatar-192x192.png?version=3">
   <meta name="msapplication-TileImage" content="images/avatar-192x192.png?version=3">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
