Skills/technology updates

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <li>Utilised AWS services like EC2, ELB, Lambda, SNS, SQS, DynamoDB, API Gateway, RDS, ElastiCache, Route 53, CloudFront and CloudWatch</li>
               <li>Architected Hello Bars's data analytics infrastructure utilising Amplitude and AWS QuickSight</li>
               <li>Responsible for recruitment process for the engineering team</li>
-              <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> <span class="technology">Node</span></li>
+              <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> <span class="technology">Node</span> <span class="technology">AWS Lambda</span></li>
             </ul>
           </li>
 
@@ -261,7 +261,7 @@
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
-                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle"></i>
               </div>
             </li>
             <li>
@@ -270,7 +270,7 @@
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
+                <i class="fa fa-circle-o"></i>
                 <i class="fa fa-circle-o"></i>
               </div>
             </li>
@@ -301,7 +301,7 @@
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
                 <i class="fa fa-circle"></i>
-                <i class="fa fa-circle-o"></i>
+                <i class="fa fa-circle"></i>
               </div>
             </li>
             <li>
