Freelance experience update

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             </div>
 
             <ul class="experience-details">
+              <li>Implemented custom issue statuses and drag'n'drop Kanban board for <a href="https://sifterapp.com/">Sifter</a> issues tracking application <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2020 - 2021</span></li>
               <li>Maintenance and development of the <a href="https://pulseapp.com/">PulseApp</a> accounting application for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2018 - 2019</span></li>
               <li>Extending Recreational Vehicles rentals and insurance whitelabel platform for <a href="https://digisure.ai/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
               <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2013 - 2015</span></li>
@@ -225,7 +226,7 @@
 
           <p>In the past worked as <strong>Team/Technical Lead</strong>, <strong>Senior Ruby/Rails Developer</strong>, and <strong>Software Engineering Manager</strong>, managing both remote and on-site teams.</p>
 
-          <p>Occasional speaker at <a href="https://trug.pl/">local Ruby community</a> meetings in Tri-City, Poland.</p>
+          <p>Occasional speaker at the local <a href="https://trug.pl/">Tri-City Ruby Users Group</a> meetings in Poland.</p>
         </article>
       </section>
 
